add example function and set it as responder to show use case

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <script src="reclap.js"></script>
 <script>
-
+  reclap.setResponder(function(state){
+    document.body.innerHTML = state
+  })
 </script>
